--- a/src/index.scss
+++ b/src/index.scss
@@ -223,7 +223,7 @@ h3 > a {
     & .location {
     }
 
-    @media screen and (max-width: 1000px){
+    @media screen and (max-width: 1000px) {
       display: flex;
       flex-direction: column;
 
@@ -551,7 +551,7 @@ h3 > a {
       align-items: center;
       justify-content: space-between;
 
-      @media screen and (max-width: 900px){
+      @media screen and (max-width: 900px) {
         & a {
           font-size: 12px;
         }
@@ -934,7 +934,7 @@ h3 > a {
   & .basket-btn {
     width: auto;
     min-width: 100px;
-    @media screen and (max-width: 900px){
+    @media screen and (max-width: 900px) {
       display: flex;
       flex-direction: column;
     }
@@ -1046,7 +1046,8 @@ h3 > a {
       }
 
     }
-    @media screen and (max-width: 1200px){
+
+    @media screen and (max-width: 1200px) {
       width: 20%;
       display: flex;
       flex-direction: column;
@@ -1080,7 +1081,6 @@ h3 > a {
       font-size: 25px;
     }
   }
-
 
 
   @media screen and (max-width: 1200px) {
@@ -1804,43 +1804,94 @@ h3 > a {
   justify-content: space-between;
   align-items: center;
   background-color: #f4f2f0;
-  padding: 20px;
+  padding: 50px 70px;
   margin-bottom: 100px;
 
   & h5 {
     color: #1d7295;
     font-weight: bold;
     text-transform: uppercase;
-
+    width: 20%;
+    text-align: left;
   }
 
   & .container-items {
-    width: 90%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-right: 10px;
 
     & .item {
       width: 20%;
+      min-width: 250px;
+      margin-right: 10px;
 
       & .custom-dropdown-item {
         width: 100%;
         position: absolute;
         background-color: #fff;
-        padding: 10px;
+        padding: 30px;
         margin-top: 20px;
         border-radius: 10px;
         box-shadow: 0 0 5px rgba(0, 0, 0, .5);
         display: flex;
         justify-content: center;
+        z-index: 100;
+
+
+        & .addition {
+          text-align: center;
+          color: $color_secondary;
+          font-size: 14px;
+          font-weight: bold;
+        }
+
+        & .content-item {
+          width: 100%;
+          display: flex;
+          align-items: flex-start;
+          padding: 15px 0;
+          line-height: 1;
+
+          & p {
+            padding: 0;
+          }
+
+
+          & img {
+            width: 40px;
+            height: 30px;
+            margin: 5px 10px 0 10px;
+          }
+
+          & .item-body {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+
+            & strong {
+              text-align: left;
+              font-weight: 500;
+            }
+
+            & small {
+              text-align: left;
+              color: gray;
+              padding-top: 5px;
+            }
+          }
+        }
 
         & .arrow {
+          box-shadow: -1px -1px 2px rgba(0, 0, 0, .5);
           width: 20px;
           height: 20px;
           position: absolute;
           top: -10px;
           background-color: white;
           transform: rotate(45deg);
+          overflow: revert;
         }
       }
 
@@ -1854,7 +1905,7 @@ h3 > a {
         border: 2px solid $color_secondary;
         border-radius: 10px;
         outline: none;
-        min-height: 60px;
+        min-height: 70px;
 
         & .bottom-title {
           display: flex;
@@ -1870,8 +1921,129 @@ h3 > a {
           font-size: 14px;
           text-align: left;
         }
+      }
+    }
+  }
 
-        & img {
+  @media screen and (max-width: 1400px) {
+
+    & h5 {
+      font-size: 14px;
+    }
+
+    & .container-items {
+
+      & .item {
+        min-width: 180px;
+
+        & .button {
+          min-height: 90px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          & .bottom-title {
+
+            & img {
+              width: 30px;
+              height: 30px;
+            }
+
+            & p {
+              text-align: center;
+              font-size: 12px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 1100px) {
+    padding: 50px 50px 20px 50px;
+
+    & h5 {
+      font-size: 14px;
+    }
+
+    & .container-items {
+
+
+      display: flex;
+      flex-wrap: wrap;
+
+      & .item {
+        min-width: 180px;
+        width: 47%;
+        padding-bottom: 30px;
+
+        & .button {
+          min-height: 90px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          & .bottom-title {
+
+            & img {
+              width: 30px;
+              height: 30px;
+            }
+
+            & p {
+              text-align: center;
+              font-size: 12px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
+
+    & h5 {
+      width: 100%;
+      text-align: center;
+      padding-bottom: 25px;
+    }
+
+    & .container-items {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      & .item {
+        width: 100%;
+        margin-bottom: 15px;
+        margin-right: 0;
+
+        & .custom-dropdown-item {
+          position: inherit;
+          width: 100%;
+          background-color: white;
+          box-shadow: none;
+          border-radius: 0 0 10px 10px;
+          margin-top: -10px;
+          overflow: hidden;
+          z-index: -100;
+
+          & .arrow {
+            display: none;
+          }
+        }
+
+        & .button {
+          background-color: white;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          padding: 0 20px;
         }
       }
     }
@@ -2512,6 +2684,7 @@ div {
 
 .workshop-list-container {
   width: 100%;
+
   & h4 {
     color: $color_secondary;
     text-align: left;
