--- a/src/index_.scss
+++ b/src/index_.scss
@@ -17,52 +17,124 @@ $btn_default_color: #229DD2;
                                     not supported by any browser */
 }
 
+.side-banner {
+    width: 260px;
+    height: 370px;
+    margin: 0 auto;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+    padding-left: 50px;
+    padding-top: 35px;
+    margin-bottom: 50px;
+
+    &-promo1 {
+        background-image: url('./images/banners/side-banners/promo_1.png');
+    }
+    &-promo2 {
+        background-image: url('./images/banners/side-banners/promo_2.png');
+    }
+
+    & .text-small {
+        width: 70%;
+        font-weight: bold;
+        font-size: 16px;
+        color: #ffffff;
+        text-align: left;
+        line-height: 16px;
+        
+        margin-bottom: 20px;
+    }
+    & .text-big {
+        text-align: left;
+        color: #ffffff;
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    &-button {
+        cursor: pointer;
+        position: absolute;
+        bottom: 10px;
+        right: 20px;
+        color: #8b8b8b;
+        font-size: 12px;
+        text-transform: uppercase;
+        font-weight: bold;
+
+        &__icon {
+            margin-left: 5px;
+            width: 20px;
+            height: 10px;
+
+            background-image: url('./images/banners/side-banners/next.png');
+        }
+    }
+
+}
+
+.banner-controls {
+    display: flex;
+    flex-flow: row nowrap;
+    width: 100%;
+    justify-content: center;
+    
+
+    &__item {
+        cursor: pointer;
+        height: 10px;
+        width: 10px;
+        border-radius: 5px;
+        margin-right: 10px;
+        background-color: #79B8D3;
+        
+        &_active {
+            background-color: #ffffff;
+        }
+    }
+}
 
 .banner {
-    width: 95%;
-    min-height: 450px;
+    width: 96%;
     border-radius: 10px;
+    //padding-top: 6%;
+    //padding-left: 8%;
+    position: relative;
+    min-height: 390px;
+    overflow: hidden;
     
-    &.banner-bg {
-        background-size: auto 100% ;
-        background-repeat: no-repeat;
-        background-position: right top;
-        min-height: 450px;
-
-        &_promo1 {
-            background-image: url('./images/banners/promo_1.png');
-        }
-        &_promo2 {
-            
-        }
-        &_promo3 {
-            
-        }
-        &_promo4 {
-            
-        }
-        &_promo5 {
-            
-        }
+    & .banner-bg {
+        position: absolute;
+        width: 100%;
+        min-height: 75%;
+        border-radius: 10px;
+        object-fit: cover;
+        right: 0;
+        top: 0;
+        z-index: -1;
     }
 
     &-body {
         width: 100%;
         height: 100%;
-        font-size: calc(24px + 16 * ((100vw - 320px) / (1280 - 320)));
         
         &__text-wrap {
+            margin-top: 6%;
+            margin-left: 8%;
             position: relative;
             display: flex;
             flex-flow: column nowrap;
             text-align: left;
+            width: 60%;
 
             &::before {
                 content: '';
                 position: absolute;
                 width: 65px;
                 height: 65px;
-                left: -75px;
+                left: -80px;
                 top: 5px;
                 background-repeat: no-repeat;
                 background-size: contain;
@@ -78,26 +150,35 @@ $btn_default_color: #229DD2;
             &_small {
                 color: #ffffff;
                 font-weight: bold;
+                font-size: 24px;
 
             }
             &_big {
                 color: #ffffff;
                 font-weight: bold;
                 text-transform: uppercase;
+                font-size: 40px;
+                line-height: 40px;
             }
         }
         &-button {
             cursor: pointer;
+            margin-top: 35px;
             width: 150px;
             height: 40px;
             border-radius: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 1px solid #ffffff;
+            border: 2px solid #ffffff;
             text-transform: uppercase;
             color: #ffffff;
             font-size: 12px;
+
+            &:active {
+                border-color: $btn_active_color;
+                color: $btn_active_color;
+            }
         }
 
     }
@@ -105,7 +186,7 @@ $btn_default_color: #229DD2;
 
 .content-wrapper {
     padding: 0 3% 60px 30px;
-    width: 100%;
+    width: 82%;
     display: flex;
     margin-left: 10px;
     
@@ -182,6 +263,13 @@ $btn_default_color: #229DD2;
     align-items: center;
     margin-bottom: 80px;
     position: relative;
+
+    .banner-controls {
+        position: absolute;
+        top: 80%;
+        z-index: 30;
+        padding-right: 40px;
+    }
 
     .carousel__title {
         position: relative;
@@ -304,6 +392,59 @@ $btn_default_color: #229DD2;
             }
         }
     }
+}
+
+.about-company {
+    display: flex;
+    flex-flow: row nowrap;
+    min-height: 450px;
+
+    img {
+        width: 30%;
+        object-fit: contain;
+        margin: 20px;
+    }
+
+    &-content {
+        margin-top: 50px;
+        .page-title {
+            margin-bottom: 35px;
+        }
+
+        width: 60%;
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: flex-start;
+
+        &__text {
+            text-align: left;
+            font-size: 16px;
+            color: #434343
+        }
+        &__button {
+            cursor: pointer;
+            margin-top: 35px;
+            width: 150px;
+            height: 40px;
+            border-radius: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid #8b8b8b;
+            text-transform: uppercase;
+            color: #8b8b8b;
+            font-size: 12px;
+            font-weight: bold;
+
+            &:active {
+                border-color: $btn_active_color;
+                color: $btn_active_color
+            }
+        }
+    }
+    
+    
+
 }
 
 .products-toolbar {
@@ -970,7 +1111,6 @@ $btn_default_color: #229DD2;
                 top: 0;
                 width: 300px;
                 height: 300px;
-                //background-color: red;
                 z-index: 500;
                 background-image: url('./images/modal_bg_top.png');
                 background-position: -600px -700px;
@@ -1553,6 +1693,12 @@ $btn_default_color: #229DD2;
     .index-page {
         .custom-carousel {
             width: 95%;
+
+            .banner-controls {
+                top: 70%;
+                padding-right: 0;
+            }
+
             .carousel-body {
                 justify-content: center;
                 padding-left: 10px;
@@ -1560,7 +1706,38 @@ $btn_default_color: #229DD2;
         }
     }
 }
+
 @media screen and(max-width: 1140px) {
+    .banner {
+        
+        &-body {
+            &__text-wrap {
+                width: 60%;
+                margin-top: 8%;
+                margin-left: 10%;
+
+                &::before {
+                    display: none;
+                }
+            }
+    
+            &__text {
+                &_small {
+                    font-size: 18px;
+    
+                }
+                &_big {
+                    font-size: 24px;
+                    line-height: 24px;
+                }
+                 &::before {
+                    display: none;
+                }
+            }
+        }
+    }
+
+
     .content-wrapper {
         padding-right: 20px;
     }
@@ -1591,48 +1768,60 @@ $btn_default_color: #229DD2;
 
 @media screen and(max-width: 768px) {
 
+    .about-company {
+        min-height: 450px;
+        
+        img {
+            display: none;
+        }
+    
+        &-content {
+            padding: 0 5%;
+            padding-bottom: 50px;
+            margin-top: 50px;
+
+            .page-title {
+                margin-bottom: 35px;
+            }
+    
+            width: 100%;
+            flex-flow: column nowrap;
+            align-items: center;
+    
+            &__text {
+                text-align: center;
+            }
+        }
+    }
+
     .banner {
-        width: 95%;
-        height: 375px;
+        height: 285px;
         
         &.banner-bg {
             background-position: 100% 0;
         }
     
         &-body {
-            
-
             &__text-wrap {
-                
-    
-                &::before {
-                    
-                }
-    
-                .banner-bg_promo1 &::before {
-                    
-                }
+                width: 60%;
+                margin-left: 5%;
+                margin-top: 13%;
             }
-    
-    
+
             &__text {
                 &_small {
-                   
+                   font-size: 12px;
                 }
                 &_big {
-                   
+                    font-size: 20px;
                 }
             }
-    
+
+            &-button {
+                width: 150px;
+            }
         }
     }
-    
-    
-    
-    
-    
-    
-    
     
     .index-page {
         .custom-carousel {
@@ -1668,7 +1857,9 @@ $btn_default_color: #229DD2;
     }
 
     .custom-carousel {
-        
+        .index-page & span.banner-controls {
+            top: 80%;
+        }
 
         .carousel__title {
             font-size: 20px;
@@ -1864,5 +2055,14 @@ $btn_default_color: #229DD2;
             height: 100px;
         }
         
+    }
+}
+
+
+@media screen and(max-width: 450px) {
+    .custom-carousel {
+        .index-page & span.banner-controls {
+            top: 65%;
+        }
     }
 }
