--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,13 @@ $color_secondary: #1d7295;
 $color_label: gray;
 $color_lite: #c3c3c3;
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body {
   margin-top: 200px;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Arial", "Roboto", "Segoe UI", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Montserrat", "Arial", "Roboto", "Segoe UI", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -1803,9 +1806,8 @@ h3 > a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f4f2f0;
+  background-color: #f4f0f2;
   padding: 50px 70px;
-  margin-bottom: 100px;
 
   & h5 {
     color: #1d7295;
