--- a/src/index.scss
+++ b/src/index.scss
@@ -41,9 +41,9 @@ h3 > a {
 
 
 .loadingBlock {
-  width: 80%;
+  width: 150px;
+  height: 150px;
   margin: 0 auto;
-  max-width: 300px;
   background-color: #222222;
   border-radius: 50%;
 
