--- a/src/index_.scss
+++ b/src/index_.scss
@@ -330,7 +330,7 @@ $btn_default_color: #229DD2;
             height: 400px;
             opacity: 1;
             transition: .4s ease-in-out;
-
+            transition: margin .08s;
             &_tile {
                 min-width: 240px;
             }
@@ -338,15 +338,25 @@ $btn_default_color: #229DD2;
 
         &.slide-prev, &.slide-next {
             
-        
             & .product-card {
                 transition: .35s ease-in-out;
                 opacity: .4;
+                transition: margin .25s;
             }
         }
 
-        
-
+        &.slide-next {
+            
+            & .product-card {
+                margin-left: -200px;
+            }
+        }
+        &.slide-prev {
+            
+            & .product-card {
+                margin-left: 200px;
+            }
+        }
     }
 
     .carousel__control_prev, .carousel__control_next {
@@ -846,10 +856,11 @@ $btn_default_color: #229DD2;
             color: #7d7d7d;
         }
         &-title {
-            font-size: 16px;
+            display: inline-block;
+            font-size: 12px;
             line-height: 20px;
             color: #434343;
-            height: 40px;
+            height: 80px;
             overflow: hidden;
         }
         &-prices-wrap {
@@ -952,9 +963,7 @@ $btn_default_color: #229DD2;
 
 }
 @media screen and(max-width: 767px) {
-    .product-card_tile {
-        width: 45%;
-    }
+    
     .product-card__basket-add {
         &-icon {
             display: block;
@@ -1850,12 +1859,16 @@ $btn_default_color: #229DD2;
     }
 
     .products-wrapper {
-        margin-right: 0;
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+
     }
 
     .page-title {
         text-align: center;
-        padding: 5px 30px;
+        padding: 5px 10px;
+        font-size: 18px;
     }
 
     .custom-carousel {
@@ -2062,8 +2075,18 @@ $btn_default_color: #229DD2;
 
 
 @media screen and(max-width: 450px) {
+    .contact-form {
+        &-title {
+            font-size: 26px;
+        }
+        &_main {
+            padding: 30px 0%;
+        }
+    }
+    
     .custom-carousel {
         .index-page & span.banner-controls {
+            
             top: 65%;
         }
     }
