--- a/src/index_.scss
+++ b/src/index_.scss
@@ -1311,7 +1311,8 @@ $btn_default_color: #229DD2;
     background-color: #ffffff;
     color: #000000;
     padding: 0 30px;
-    
+    &::-webkit-input-placeholder {font-size: 11px}
+
     
     &:focus {
         outline: none;
