--- a/src/index.scss
+++ b/src/index.scss
@@ -1218,8 +1218,6 @@ h3 > a {
 }
 
 .order-add {
-  width: 50%;
-  max-width: 700px;
 
   .hr-1 {
     border: none;
@@ -1307,7 +1305,38 @@ h3 > a {
     }
   }
 
+  @media screen and (max-width: 1100px) {
+
+    & hr {
+      margin: 5px;
+  }
+
+    & .order-add-form-input {
+      padding: 5px 0;
+
+      & p {
+        font-size: 14px;
+      }
+    }
+
+    & .order-add-text {
+      & p {
+        font-size: 14px
+      }
+    }
+
+    & .order-add-delivery {
+
+      & .paragraph {
+        & p {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+
   @media screen and (max-width: 767px) {
+
     width: 100%;
     max-width: 1000px;
     display: flex;
@@ -1759,10 +1788,9 @@ h3 > a {
 
   .card-container {
     margin: 20px;
-    height: 450px;
+    height: 420px;
     overflow: hidden;
-    max-width: 470px;
-    width: auto;
+    width: 300px;
     border-radius: 10px;
 
     &:hover {
@@ -2352,7 +2380,7 @@ h3 > a {
           align-items: center;
           justify-content: center;
           height: auto;
-          
+
           & .carousel-arrow {
             transform: rotate(-90deg);
           }
@@ -3553,6 +3581,14 @@ nav.navbar {
   max-width: 10vw;
 }
 
+.sub-categories {
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  border: 2px solid #b3a501;
+  position: absolute;
+  right: -400px;
+  top: 1px;
+}
 
 .editorClassName {
   height: 30vh !important;
