--- a/src/index.scss
+++ b/src/index.scss
@@ -1309,7 +1309,7 @@ h3 > a {
 
     & hr {
       margin: 5px;
-  }
+    }
 
     & .order-add-form-input {
       padding: 5px 0;
@@ -2362,7 +2362,7 @@ h3 > a {
         }
       }
 
-      @media screen and (max-width: 1500px){
+      @media screen and (max-width: 1500px) {
         display: flex;
         flex-direction: column-reverse;
         width: 100%;
@@ -2394,6 +2394,7 @@ h3 > a {
           & .product-carousel {
             height: auto;
             width: auto;
+
             & .images {
               display: flex;
               flex-direction: row;
@@ -2402,6 +2403,7 @@ h3 > a {
               & .image {
                 margin: 5px;
               }
+
               & .image-placeholder {
                 margin: 5px;
               }
@@ -2411,7 +2413,8 @@ h3 > a {
       }
     }
   }
-  @media screen and (max-width:1200px) {
+
+  @media screen and (max-width: 1200px) {
 
     &__description {
       width: 100%;
@@ -2423,7 +2426,6 @@ h3 > a {
       flex-direction: column;
       width: 100%;
       min-width: 200px;
-
 
 
       & .price {
@@ -2602,8 +2604,14 @@ h3 > a {
   & .items {
     padding-left: 15px;
 
+    &__subcategories {
+      position: absolute;
+    }
+
     & .icons-left-menu {
       filter: grayscale(10);
+
+
     }
   }
 
