fixing pagination when change categories to catalog

--- a/src/index.scss
+++ b/src/index.scss
@@ -2134,6 +2134,10 @@ h3 > a {
       width: 30%;
     }
 
+    & .number-pages-container.one {
+      width: 10%;
+    }
+
     & .number-pages-container {
       width: 50%;
       display: flex;
