--- a/src/index.scss
+++ b/src/index.scss
@@ -3063,9 +3063,51 @@ div {
         }
       }
     }
+  }
+}
 
+.conf-inf {
+  padding-right: 30px;
+  & h5 {
+    font-weight: bold;
+    text-transform: uppercase;
+    color: $color_secondary;
+    text-align: left;
+    padding-bottom: 10px;
+    
+    @media screen and (max-width:768px){
+      text-align: center;
+    }
+  }
+  
+  & p {
+    text-align: left;
+  }
+}
+
+.workshop-item-examples {
+  width: 100%;
+  padding: 0;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  &__images {
+    max-width: 350px;
+    max-height: 250px;
   }
 
+  &__image {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    object-fit: cover;
+
+    @media screen and (max-width: 767px) {
+      max-width: 90%;
+    }
+  }
 }
 
 .workshop-item {
