--- a/src/index_.scss
+++ b/src/index_.scss
@@ -110,6 +110,7 @@ $btn_default_color: #229DD2;
         border-radius: 10px;
         object-fit: contain;
         z-index: -1;
+        max-width: 100%;
     }
 
     &-body {
@@ -368,6 +369,8 @@ $btn_default_color: #229DD2;
 }
 
 .index-page {
+
+    width: 10%;
 
     .custom-carousel {
         margin-bottom: 0;
