--- a/src/index_.scss
+++ b/src/index_.scss
@@ -929,6 +929,9 @@ $btn_default_color: #229DD2;
     &:hover {
         background-color: $btn_active_color;
     }
+    &.inBasket {
+        background-color: $btn_active_color;
+    }
 
     &-counter {
         height: 100%;
@@ -957,7 +960,17 @@ $btn_default_color: #229DD2;
 
         }
         & > &-value {
+            width: 20px;
+            text-align: center;
+            outline: none;
+
             font-size: 14px;
+
+            background-color: transparent;
+            border: 0px solid;
+            height: 20px;
+            width: 35px;
+            
         }
     }
 
