--- a/src/index.scss
+++ b/src/index.scss
@@ -2627,7 +2627,7 @@ h3 > a {
   width: 19%;
   min-width: 310px;
   margin-left: 3%;
-  max-height: 2100px;
+  max-height: 2300px;
   font-size: 14px;
   display: flex;
   flex-direction: column;
@@ -2636,7 +2636,7 @@ h3 > a {
 
   & .list {
     overflow: hidden;
-    max-height: 2000px;
+    max-height: 2300px;
     padding-right: 0;
     transition: max-height 1.3s ease-in-out;
     width: 100%;
@@ -3328,6 +3328,33 @@ div {
         align-items: center;
         margin: 20px 0 20px 0;
 
+        & .material-item-image {
+          width: 100px;
+          height: 100px;
+
+          &__splash {
+            background-color: #8b8b8b;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+
+            & p {
+              margin: 0;
+              color: #f5f5f5
+            }
+          }
+
+          & img {
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            object-fit: contain;
+          }
+        }
+
         & .material-item-description {
           margin-left: 20px;
           text-align: left;
@@ -3361,6 +3388,41 @@ div {
         width: 90%;
         border: 1px solid $color_lite;
         border-radius: 10px;
+        position: relative;
+
+
+        &::before {
+          content: '';
+          height: 50px;
+          width: 40%;
+          //background-color: black;
+          background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255, 0), rgba(255,255,255, .2), rgba(255,255,255, .6), rgba(255,255,255, 1));
+          position: absolute;
+          top: 0;
+        }
+
+        & img {
+          border-radius: 10px 0 0 10px;
+          width: 40%;
+          height: 50px;
+          object-fit: cover;
+        }
+
+        &__splash-mobile {
+          border: 1px solid $color_lite;
+          border-radius: 10px;
+          background-color: #8b8b8b;
+          width: 40%;
+          height: 50px;
+          justify-content: center;
+          align-items: center;
+          display: flex;
+
+          & p {
+            margin: 0;
+            color: #f5f5f5
+          }
+        }
       }
 
       & div {
