--- a/src/index.scss
+++ b/src/index.scss
@@ -3181,7 +3181,7 @@ div {
     width: 100%;
     height: 100%;
     padding: 10px;
-    object-fit: cover;
+    object-fit: contain;
 
     @media screen and (max-width: 767px) {
       max-width: 90%;
