--- a/src/index_.scss
+++ b/src/index_.scss
@@ -17,6 +17,47 @@ $btn_default_color: #229DD2;
                                     not supported by any browser */
 }
 
+.true-pagination {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px auto;
+    font-size: 18px;
+    max-width: 600px;
+    
+    
+
+    & .pagination__item {
+        width: 42px;
+        height: 42px;
+        padding: 7px;
+        border-radius: 50%;
+        margin: 0;
+        cursor: pointer;
+        color: #c3c3c3;
+
+        &_dotted {
+            margin-bottom: -5px;
+        }
+        
+        &:hover {
+            background-color: #e8e8e8;
+        }
+
+        &_active {
+            font-size: 1.1rem;
+            line-height: 1.8rem;
+            background-color: #e8e8e8e7;
+        }
+    }
+
+    span.pagination__item {
+        color: grey;
+    }
+    
+}
+
 .side-banner {
     width: 260px;
     height: 370px;
@@ -750,6 +791,7 @@ $btn_default_color: #229DD2;
 
     &:hover {
         box-shadow: 0 0 15px -5px #797676;
+        text-decoration: none;
     }
 
     &__favorite-icon {
