--- a/src/index_.scss
+++ b/src/index_.scss
@@ -151,7 +151,7 @@ $btn_default_color: #229DD2;
         border-radius: 10px;
         object-fit: contain;
         z-index: -1;
-        max-width: 100%;
+        width: 100%;
     }
 
     &-body {
