--- a/src/index_.scss
+++ b/src/index_.scss
@@ -867,7 +867,7 @@ $btn_default_color: #229DD2;
     &__image-wrapper {
         overflow: hidden;
         padding-top: 35px;
-        
+
 
         .product-card_list & {
             width: 30%;
@@ -883,7 +883,7 @@ $btn_default_color: #229DD2;
         object-fit: contain;
         width: 90%;
         height: 100%;
-        
+        min-height: 150px;
     }
 
     &__description {
