--- a/src/index_.scss
+++ b/src/index_.scss
@@ -2017,7 +2017,7 @@ $btn_default_color: #229DD2;
 
             .product-card {
                 &_tile {
-                    height: 320px;
+                    //height: 320px;
                     width: 240px;
                 }
                 
